<resources>
    <string name="app_name">TravelApp</string>

    <string-array name="am_pm_array">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string name="login_title">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup_redirect">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="sign_up_google">Sign up with Google</string>
    <string name="sign_up_apple">Sign up with Apple</string>

    <string name="email_input_desc">Email input field</string>
    <string name="password_input_desc">Password input field</string>
    <string name="search_destinations">Search destinations...</string>
    <string name="nuwara_eliya">Nuwara Eliya</string>
    <string name="polonnaruwa">Polonnaruwa</string>


    <!-- Add other strings as needed -->
</resources>
